--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -8,4 +8,4 @@ plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
     spec: "@yarnpkg/plugin-workspace-tools"
 
-yarnPath: .yarn/releases/yarn-1.23.0-20210726.1745.cjs
+yarnPath: .yarn/releases/yarn-3.0.0.cjs
