--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,8 @@
 backend:
-  name: git-gateway
-  branch: master
+  name: github
+  repo: vasfvitor/gatsby-advanced-starter
+  base_url: https://gatsby-advanced-starter-sand.vercel.app/
+  auth_endpoint: api/auth
 
   commit_messages:
     create: 'Create {{collection}} “{{slug}}”'
