--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: github
   repo: vasfvitor/gatsby-advanced-starter
-  base_url: https://combablog.gatsbyjs.io/
+  base_url: https://combablog.gatsbyjs.io
   auth_endpoint: api/auth
 
   commit_messages:
