--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@openlab/vercel-netlify-cms-github": "^1.1.1",
     "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.14.0",
+    "gatsby-plugin-gatsby-cloud": "^3.2.0",
     "gatsby-plugin-google-tagmanager": "^3.14.0",
     "gatsby-plugin-styled-components": "^4.14.0",
     "gatsby-theme-amaranth": "*",
