--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.13.2",
-    "gatsby": "^3.14.2",
-    "gatsby-plugin-styled-components": "^4.14.0",
+    "gatsby": "next",
+    "gatsby-plugin-styled-components": "next",
     "gatsby-theme-amaranth": "*",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -81,7 +81,7 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^4.12.4",
-    "gatsby-cypress": "^1.14.0",
+    "gatsby-cypress": "next",
     "gh-pages": "^3.2.3",
     "jest": "^27.2.5",
     "jest-styled-components": "^7.0.5",
