--- a/themes/advanced/package.json
+++ b/themes/advanced/package.json
@@ -19,35 +19,35 @@
     "@types/mdx-js__react": "^1.5.4",
     "date-fns": "^2.25.0",
     "eslint-plugin-graphql": "^4.0.0",
-    "gatsby-image": "^3.11.0",
-    "gatsby-plugin-catch-links": "^3.14.0",
+    "gatsby-image": "next",
+    "gatsby-plugin-catch-links": "next",
     "gatsby-plugin-compile-es6-packages": "^2.1.1",
     "gatsby-plugin-disqus": "^1.2.3",
-    "gatsby-plugin-feed": "^3.14.0",
-    "gatsby-plugin-google-gtag": "^3.14.0",
-    "gatsby-plugin-image": "^1.14.1",
-    "gatsby-plugin-lodash": "^4.14.0",
-    "gatsby-plugin-manifest": "^3.14.0",
+    "gatsby-plugin-feed": "next",
+    "gatsby-plugin-google-gtag": "next",
+    "gatsby-plugin-image": "next",
+    "gatsby-plugin-lodash": "next",
+    "gatsby-plugin-manifest": "next",
     "gatsby-plugin-mdx": "^2.14.0",
-    "gatsby-plugin-netlify-cms": "^5.14.0",
-    "gatsby-plugin-nprogress": "^3.14.0",
-    "gatsby-plugin-offline": "^4.14.0",
-    "gatsby-plugin-page-creator": "^3.14.0",
-    "gatsby-plugin-react-helmet": "^4.14.0",
+    "gatsby-plugin-netlify-cms": "next",
+    "gatsby-plugin-nprogress": "next",
+    "gatsby-plugin-offline": "next",
+    "gatsby-plugin-page-creator": "next",
+    "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-react-svg": "^3.0.1",
-    "gatsby-plugin-sharp": "^3.14.1",
-    "gatsby-plugin-sitemap": "^4.10.0",
-    "gatsby-plugin-twitter": "^3.14.0",
-    "gatsby-remark-autolink-headers": "^4.11.0",
-    "gatsby-remark-copy-linked-files": "^4.11.0",
+    "gatsby-plugin-sharp": "next",
+    "gatsby-plugin-sitemap": "next",
+    "gatsby-plugin-twitter": "next",
+    "gatsby-remark-autolink-headers": "next",
+    "gatsby-remark-copy-linked-files": "next",
     "gatsby-remark-embed-video": "^3.1.1",
-    "gatsby-remark-images": "^5.11.0",
-    "gatsby-remark-prismjs": "^5.11.0",
+    "gatsby-remark-images": "next",
+    "gatsby-remark-prismjs": "next",
     "gatsby-remark-relative-images": "^2.0.2",
-    "gatsby-remark-responsive-iframe": "^4.11.0",
-    "gatsby-source-filesystem": "^3.14.0",
-    "gatsby-transformer-remark": "^4.11.0",
-    "gatsby-transformer-sharp": "^3.14.0",
+    "gatsby-remark-responsive-iframe": "next",
+    "gatsby-source-filesystem": "next",
+    "gatsby-transformer-remark": "next",
+    "gatsby-transformer-sharp": "next",
     "is-absolute-url": "^3.0.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
@@ -91,7 +91,7 @@
     "@types/url-join": "^4.0.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "babel-jest": "^27.2.5",
-    "babel-preset-gatsby": "^1.14.0",
+    "babel-preset-gatsby": "next",
     "cli-glob": "^0.1.0",
     "clone-deep": "^4.0.1",
     "eslint": "^7.32.0",
@@ -107,7 +107,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^4.12.4",
     "fetch-mock": "^9.11.0",
-    "gatsby": "^3.14.2",
+    "gatsby": "next",
     "gh-pages": "^3.2.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.2.5",
@@ -127,7 +127,7 @@
     "write-good": "^1.0.8"
   },
   "peerDependencies": {
-    "gatsby": "^3.8.1",
+    "gatsby": "*",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
