--- a/themes/advanced/package.json
+++ b/themes/advanced/package.json
@@ -19,44 +19,43 @@
     "@types/mdx-js__react": "^1.5.4",
     "date-fns": "^2.25.0",
     "eslint-plugin-graphql": "^4.0.0",
-    "gatsby-image": "next",
-    "gatsby-plugin-catch-links": "next",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-catch-links": "^4.0.0",
     "gatsby-plugin-compile-es6-packages": "^2.1.1",
     "gatsby-plugin-disqus": "^1.2.3",
-    "gatsby-plugin-feed": "next",
-    "gatsby-plugin-google-gtag": "next",
-    "gatsby-plugin-image": "next",
-    "gatsby-plugin-lodash": "next",
-    "gatsby-plugin-manifest": "next",
-    "gatsby-plugin-mdx": "^2.14.0",
-    "gatsby-plugin-netlify-cms": "next",
-    "gatsby-plugin-nprogress": "next",
-    "gatsby-plugin-offline": "next",
-    "gatsby-plugin-page-creator": "next",
-    "gatsby-plugin-react-helmet": "next",
-    "gatsby-plugin-react-svg": "^3.0.1",
-    "gatsby-plugin-sharp": "next",
-    "gatsby-plugin-sitemap": "next",
-    "gatsby-plugin-twitter": "next",
-    "gatsby-remark-autolink-headers": "next",
-    "gatsby-remark-copy-linked-files": "next",
+    "gatsby-plugin-feed": "^4.0.0",
+    "gatsby-plugin-google-gtag": "^4.0.0",
+    "gatsby-plugin-image": "^2.0.0",
+    "gatsby-plugin-lodash": "^5.0.0",
+    "gatsby-plugin-manifest": "^4.0.0",
+    "gatsby-plugin-mdx": "^3.0.0",
+    "gatsby-plugin-netlify-cms": "^6.0.0",
+    "gatsby-plugin-nprogress": "^4.0.0",
+    "gatsby-plugin-offline": "^5.0.0",
+    "gatsby-plugin-page-creator": "^4.0.0",
+    "gatsby-plugin-react-helmet": "^5.0.0",
+    "gatsby-plugin-react-svg": "^3.1.0",
+    "gatsby-plugin-sharp": "^4.0.0",
+    "gatsby-plugin-sitemap": "^5.0.0",
+    "gatsby-plugin-twitter": "^4.0.0",
+    "gatsby-remark-autolink-headers": "^5.0.0",
+    "gatsby-remark-copy-linked-files": "^5.0.0",
     "gatsby-remark-embed-video": "^3.1.1",
-    "gatsby-remark-images": "next",
-    "gatsby-remark-prismjs": "next",
-    "gatsby-remark-relative-images": "^2.0.2",
-    "gatsby-remark-responsive-iframe": "next",
-    "gatsby-source-filesystem": "next",
-    "gatsby-transformer-remark": "next",
-    "gatsby-transformer-sharp": "next",
+    "gatsby-remark-images": "^6.0.0",
+    "gatsby-remark-prismjs": "^6.0.0",
+    "gatsby-remark-responsive-iframe": "^5.0.0",
+    "gatsby-source-filesystem": "^4.0.0",
+    "gatsby-transformer-remark": "^5.0.0",
+    "gatsby-transformer-sharp": "^4.0.0",
     "is-absolute-url": "^3.0.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "netlify-cms-app": "^2.15.49",
+    "netlify-cms-app": "^2.15.54",
     "prism-themes": "^1.9.0",
     "prismjs": "^1.25.0",
     "react-color": "^2.19.3",
     "react-helmet": "^6.1.0",
-    "react-query": "^3.26.0",
+    "react-query": "^3.28.0",
     "react-share": "^4.4.0",
     "react-twitter-widgets": "^1.10.0",
     "remark-codesandbox": "^0.10.0",
@@ -64,7 +63,7 @@
     "remark-unwrap-images": "^2.1.0",
     "remove-markdown": "^0.3.0",
     "source-map-support": "^0.5.20",
-    "ts-node": "^10.2.1",
+    "ts-node": "^10.4.0",
     "url-join": "^4.0.1"
   },
   "devDependencies": {
@@ -74,32 +73,32 @@
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
-    "@testing-library/dom": "^8.7.2",
+    "@testing-library/dom": "^8.10.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/react-hooks": "^7.0.2",
     "@types/babel__plugin-transform-runtime": "^7.9.2",
     "@types/clone-deep": "^4.0.1",
     "@types/jest": "^27.0.2",
-    "@types/node": "^16.10.3",
-    "@types/react": "^17.0.27",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-helmet": "^6.1.3",
+    "@types/node": "^16.11.4",
+    "@types/react": "^17.0.31",
+    "@types/react-dom": "^17.0.10",
+    "@types/react-helmet": "^6.1.4",
     "@types/react-test-renderer": "^17.0.1",
     "@types/remove-markdown": "^0.3.1",
     "@types/source-map-support": "^0.5.4",
     "@types/url-join": "^4.0.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "babel-jest": "^27.2.5",
-    "babel-preset-gatsby": "next",
+    "babel-jest": "^27.3.1",
+    "babel-preset-gatsby": "^2.0.0",
     "cli-glob": "^0.1.0",
     "clone-deep": "^4.0.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^14.0.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jest": "^25.0.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jest": "^25.2.2",
     "eslint-plugin-jest-dom": "^3.9.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
@@ -107,23 +106,23 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^4.12.4",
     "fetch-mock": "^9.11.0",
-    "gatsby": "next",
+    "gatsby": "^4.0.0",
     "gh-pages": "^3.2.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.2.5",
+    "jest": "^27.3.1",
     "markdownlint-cli2": "^0.3.2",
     "memfs": "^3.3.0",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-test-renderer": "^17.0.2",
-    "stylelint": "^13.13.1",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-recommended": "^5.0.0",
+    "stylelint": "^14.0.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recommended": "^6.0.0",
     "stylelint-prettier": "^1.2.0",
-    "ts-jest": "^27.0.5",
+    "ts-jest": "^27.0.7",
     "ts-prune": "^0.10.1",
-    "typescript": "^4.4.3",
+    "typescript": "^4.4.4",
     "write-good": "^1.0.8"
   },
   "peerDependencies": {
