--- a/themes/advanced/package.json
+++ b/themes/advanced/package.json
@@ -79,7 +79,7 @@
     "@testing-library/react-hooks": "^7.0.2",
     "@types/babel__plugin-transform-runtime": "^7.9.2",
     "@types/clone-deep": "^4.0.1",
-    "@types/jest": "^27.0.2",
+    "@types/jest": "^28.1.3",
     "@types/node": "^16.11.4",
     "@types/react": "^17.0.31",
     "@types/react-dom": "^17.0.10",
@@ -109,7 +109,8 @@
     "gatsby": "^4.17.1",
     "gh-pages": "^3.2.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.3.1",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
     "markdownlint-cli2": "^0.3.2",
     "memfs": "^3.3.0",
     "prettier": "^2.4.1",
@@ -120,7 +121,7 @@
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recommended": "^5.0.0",
     "stylelint-prettier": "^1.2.0",
-    "ts-jest": "^27.0.7",
+    "ts-jest": "^28.0.5",
     "ts-prune": "^0.10.1",
     "typescript": "^4.4.4",
     "write-good": "^1.0.8"
