--- a/themes/amaranth/package.json
+++ b/themes/amaranth/package.json
@@ -79,7 +79,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/babel__plugin-transform-runtime": "^7.9.2",
     "@types/clone-deep": "^4.0.1",
-    "@types/jest": "^27.0.2",
+    "@types/jest": "^28.1.3",
     "@types/node": "^16.11.4",
     "@types/react": "^17.0.31",
     "@types/react-dom": "^17.0.10",
@@ -107,8 +107,9 @@
     "gatsby": "^4.17.1",
     "gh-pages": "^3.2.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.3.1",
-    "jest-styled-components": "^7.0.5",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
+    "jest-styled-components": "^7.0.8",
     "markdownlint-cli2": "^0.3.2",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
@@ -117,7 +118,7 @@
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recommended": "^5.0.0",
     "stylelint-prettier": "^1.2.0",
-    "ts-jest": "^27.0.7",
+    "ts-jest": "^28.0.5",
     "ts-node": "^10.4.0",
     "ts-prune": "^0.10.1",
     "typescript": "^4.4.4",
