--- a/examples/amaranth-demo/package.json
+++ b/examples/amaranth-demo/package.json
@@ -40,7 +40,7 @@
     "test:e2e:ci": "CYPRESS_SUPPORT=y npm run build && start-server-and-test serve http://localhost:9000 cy:run"
   },
   "dependencies": {
-    "babel-plugin-styled-components": "^1.13.3",
+    "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^4.17.1",
     "gatsby-plugin-styled-components": "^5.17.0",
     "gatsby-theme-amaranth": "*",
@@ -49,46 +49,49 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@stylelint/postcss-css-in-js": "^0.38.0",
     "@testing-library/cypress": "^8.0.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^28.1.3",
-    "@types/node": "^16.11.4",
+    "@types/node": "^18.0.0",
     "@types/react": "^17.0.31",
     "@types/react-dom": "^17.0.10",
-    "@types/styled-components": "^5.1.15",
-    "@types/xml2js": "^0.4.9",
-    "@typescript-eslint/eslint-plugin": "^5.1.0",
-    "axe-core": "^4.3.3",
-    "babel-jest": "^27.3.1",
-    "cypress": "^8.6.0",
-    "cypress-axe": "^0.13.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-typescript": "^14.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jest": "^25.2.2",
-    "eslint-plugin-jest-dom": "^3.9.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "@types/styled-components": "^5.1.25",
+    "@types/xml2js": "^0.4.11",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "axe-core": "^4.4.2",
+    "babel-jest": "^28.1.1",
+    "cypress": "^8.7.0",
+    "cypress-axe": "^1.0.0",
+    "eslint": "^8.18.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.5.3",
+    "eslint-plugin-jest-dom": "^4.0.2",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-testing-library": "^4.12.4",
-    "gatsby-cypress": "^2.0.0",
-    "gh-pages": "^3.2.3",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-testing-library": "^5.5.1",
+    "gatsby-cypress": "^2.17.0",
+    "gh-pages": "^4.0.0",
     "jest": "^28.1.1",
-    "markdownlint-cli2": "^0.3.2",
-    "prettier": "^2.4.1",
+    "markdownlint-cli2": "^0.4.0",
+    "postcss-syntax": "^0.36.2",
+    "prettier": "^2.7.1",
     "start-server-and-test": "^1.14.0",
-    "stylelint": "^13.13.1",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-recommended": "^5.0.0",
-    "stylelint-prettier": "^1.2.0",
+    "stylelint": "^14.9.1",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recommended": "^8.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-prettier": "^2.0.0",
     "ts-jest": "^28.0.5",
-    "ts-node": "^10.4.0",
-    "ts-prune": "^0.10.1",
-    "typescript": "^4.4.4",
+    "ts-node": "^10.8.1",
+    "ts-prune": "^0.10.3",
+    "typescript": "^4.7.4",
     "write-good": "^1.0.8",
     "xml2js": "^0.4.23"
   }
