--- a/themes/advanced/package.json
+++ b/themes/advanced/package.json
@@ -16,7 +16,7 @@
     "@fec/remark-a11y-emoji": "^3.1.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "@types/mdx-js__react": "^1.5.4",
+    "@types/mdx-js__react": "^1.5.5",
     "date-fns": "^2.25.0",
     "eslint-plugin-graphql": "^4.0.0",
     "gatsby-image": "^3.11.0",
@@ -62,17 +62,18 @@
     "remark-external-links": "^8.0.0",
     "remark-unwrap-images": "^2.1.0",
     "remove-markdown": "^0.3.0",
-    "source-map-support": "^0.5.20",
-    "ts-node": "^10.4.0",
+    "source-map-support": "^0.5.21",
+    "ts-node": "^10.8.1",
     "url-join": "^4.0.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.15.7",
-    "@babel/core": "^7.15.8",
-    "@babel/plugin-transform-runtime": "^7.15.8",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.15.0",
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.18.5",
+    "@babel/plugin-transform-runtime": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
+    "@babel/preset-typescript": "^7.17.12",
+    "@stylelint/postcss-css-in-js": "^0.38.0",
     "@testing-library/dom": "^8.10.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
@@ -80,7 +81,7 @@
     "@types/babel__plugin-transform-runtime": "^7.9.2",
     "@types/clone-deep": "^4.0.1",
     "@types/jest": "^28.1.3",
-    "@types/node": "^16.11.4",
+    "@types/node": "^18.0.0",
     "@types/react": "^17.0.31",
     "@types/react-dom": "^17.0.10",
     "@types/react-helmet": "^6.1.4",
@@ -88,42 +89,45 @@
     "@types/remove-markdown": "^0.3.1",
     "@types/source-map-support": "^0.5.4",
     "@types/url-join": "^4.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.1.0",
-    "babel-jest": "^27.3.1",
-    "babel-preset-gatsby": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "babel-jest": "^28.1.1",
+    "babel-preset-gatsby": "^2.17.0",
     "cli-glob": "^0.1.0",
     "clone-deep": "^4.0.1",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-typescript": "^14.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jest": "^25.2.2",
-    "eslint-plugin-jest-dom": "^3.9.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint": "^8.18.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.5.3",
+    "eslint-plugin-jest-dom": "^4.0.2",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-testing-library": "^4.12.4",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-testing-library": "^5.5.1",
     "fetch-mock": "^9.11.0",
     "gatsby": "^4.17.1",
-    "gh-pages": "^3.2.3",
+    "gh-pages": "^4.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
-    "markdownlint-cli2": "^0.3.2",
+    "markdownlint-cli2": "^0.4.0",
     "memfs": "^3.3.0",
-    "prettier": "^2.4.1",
+    "postcss-syntax": "^0.36.2",
+    "prettier": "^2.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-test-renderer": "^17.0.2",
-    "stylelint": "^13.13.1",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-recommended": "^5.0.0",
-    "stylelint-prettier": "^1.2.0",
+    "stylelint": "^14.9.1",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recommended": "^8.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-prettier": "^2.0.0",
     "ts-jest": "^28.0.5",
-    "ts-prune": "^0.10.1",
-    "typescript": "^4.4.4",
+    "ts-prune": "^0.10.3",
+    "typescript": "^4.7.4",
     "write-good": "^1.0.8"
   },
   "peerDependencies": {
