--- a/themes/amaranth/package.json
+++ b/themes/amaranth/package.json
@@ -17,8 +17,8 @@
     "@styled-icons/boxicons-logos": "^10.38.0",
     "@styled-icons/boxicons-regular": "^10.38.0",
     "@styled-icons/styled-icon": "^10.6.3",
-    "@types/mdx-js__react": "^1.5.4",
-    "babel-plugin-styled-components": "^1.13.3",
+    "@types/mdx-js__react": "^1.5.5",
+    "babel-plugin-styled-components": "^2.0.7",
     "date-fns": "^2.25.0",
     "eslint-plugin-graphql": "^4.0.0",
     "gatsby-image": "^3.11.0",
@@ -68,60 +68,64 @@
     "url-join": "^4.0.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.15.7",
-    "@babel/core": "^7.15.8",
-    "@babel/plugin-transform-runtime": "^7.15.8",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.15.0",
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.18.5",
+    "@babel/plugin-transform-runtime": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
+    "@babel/preset-typescript": "^7.17.12",
+    "@stylelint/postcss-css-in-js": "^0.38.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/babel__plugin-transform-runtime": "^7.9.2",
     "@types/clone-deep": "^4.0.1",
     "@types/jest": "^28.1.3",
-    "@types/node": "^16.11.4",
+    "@types/node": "^18.0.0",
     "@types/react": "^17.0.31",
     "@types/react-dom": "^17.0.10",
     "@types/react-helmet": "^6.1.4",
     "@types/remove-markdown": "^0.3.1",
-    "@types/styled-components": "^5.1.15",
+    "@types/styled-components": "^5.1.25",
     "@types/url-join": "^4.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.1.0",
-    "babel-jest": "^27.3.1",
-    "babel-preset-gatsby": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "babel-jest": "^28.1.1",
+    "babel-preset-gatsby": "^2.17.0",
     "cli-glob": "^0.1.0",
     "clone-deep": "^4.0.1",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-typescript": "^14.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jest": "^25.2.2",
-    "eslint-plugin-jest-dom": "^3.9.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint": "^8.18.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.5.3",
+    "eslint-plugin-jest-dom": "^4.0.2",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-testing-library": "^4.12.4",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-testing-library": "^5.5.1",
     "gatsby": "^4.17.1",
-    "gh-pages": "^3.2.3",
+    "gh-pages": "^4.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
     "jest-styled-components": "^7.0.8",
-    "markdownlint-cli2": "^0.3.2",
-    "prettier": "^2.4.1",
+    "markdownlint-cli2": "^0.4.0",
+    "postcss-syntax": "^0.36.2",
+    "prettier": "^2.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "stylelint": "^13.13.1",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-recommended": "^5.0.0",
-    "stylelint-prettier": "^1.2.0",
+    "stylelint": "^14.9.1",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recommended": "^8.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-prettier": "^2.0.0",
     "ts-jest": "^28.0.5",
-    "ts-node": "^10.4.0",
-    "ts-prune": "^0.10.1",
-    "typescript": "^4.4.4",
+    "ts-node": "^10.8.1",
+    "ts-prune": "^0.10.3",
+    "typescript": "^4.7.4",
     "write-good": "^1.0.8"
   },
   "peerDependencies": {
