--- a/examples/amaranth-demo/package.json
+++ b/examples/amaranth-demo/package.json
@@ -44,19 +44,20 @@
     "gatsby": "^4.17.1",
     "gatsby-plugin-styled-components": "^5.17.0",
     "gatsby-theme-amaranth": "*",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "styled-components": "^5.3.3"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@stylelint/postcss-css-in-js": "^0.38.0",
-    "@testing-library/cypress": "^8.0.1",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/cypress": "^8.0.3",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.3",
     "@types/node": "^18.0.0",
-    "@types/react": "^17.0.31",
-    "@types/react-dom": "^17.0.10",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "@types/react-helmet": "^6.1.5",
     "@types/styled-components": "^5.1.25",
     "@types/xml2js": "^0.4.11",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
