--- a/package.json
+++ b/package.json
@@ -51,20 +51,20 @@
     "gatsby": "^4.17.1",
     "gatsby-plugin-styled-components": "^5.17.0",
     "gatsby-theme-amaranth": "*",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-query": "^3.28.0",
-    "styled-components": "^5.3.3"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.1",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@testing-library/cypress": "^8.0.1",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/cypress": "^8.0.3",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.3",
     "@types/node": "^18.0.0",
-    "@types/react": "^17.0.31",
-    "@types/react-dom": "^17.0.10",
-    "@types/react-helmet": "^6.1.4",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "@types/react-helmet": "^6.1.5",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
@@ -104,7 +104,9 @@
     "write-good": "^1.0.8"
   },
   "resolutions": {
-    "postcss": "8.3.5"
+    "postcss": "8.3.5",
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
   },
   "packageManager": "yarn@3.2.1"
 }
