--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "write-good": "^1.0.8"
   },
   "resolutions": {
+    "caniuse-lite": "1.0.30001359",
     "postcss": "8.3.5",
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.2"
