--- a/package.json
+++ b/package.json
@@ -51,10 +51,10 @@
     "gatsby": "^4.17.1",
     "gatsby-plugin-styled-components": "^5.17.0",
     "gatsby-theme-amaranth": "*",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-query": "^3.39.1",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@testing-library/cypress": "^8.0.3",
@@ -62,8 +62,8 @@
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.3",
     "@types/node": "^18.0.0",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
+    "@types/react": "^17.0.47",
+    "@types/react-dom": "^17.0.17",
     "@types/react-helmet": "^6.1.5",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
@@ -105,9 +105,7 @@
   },
   "resolutions": {
     "caniuse-lite": "1.0.30001359",
-    "postcss": "8.3.5",
-    "@types/react": "17.0.2",
-    "@types/react-dom": "17.0.2"
+    "postcss": "8.3.5"
   },
   "packageManager": "yarn@3.2.1"
 }
