--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -4,5 +4,5 @@
     "lib": ["es5", "dom"],
     "types": ["cypress", "cypress-axe", "@testing-library/cypress"]
   },
-  "include": ["./**/*.ts", "./.eslintrc.js"]
+  "include": ["./**/*.ts", "../cypress.config.ts", "./.eslintrc.js"]
 }
