--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "**/node_modules",
     "**/.cache/*",
     "**/public",
-    "**/cypress"
+    "**/cypress",
+    "**/cypress.config.ts"
   ],
   "include": [
     "./src/",
@@ -13,8 +14,7 @@
     "**/src/**/*",
     "**/__mocks__/**/*",
     "**/test/**/*",
-    "**/index.ts",
-    "**/cypress.config.ts"
+    "**/index.ts"
   ],
   "compilerOptions": {
     "jsx": "react",
